<resources>
    <string name="app_name">Homework 01</string>
    <string name="BMI">Body Mass Index (BMI)</string>
    <string name="weight">Weight</string>
    <string name="lb">lb</string>
    <string name="height">Height</string>
    <string name="calculateBMI">Calculate BMI</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="bmivalue" />
</resources>
